--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Margret-Howth--A-Story-of-To-day_515
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Davis, Rebecca Harding
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/186
     wikipedia: http://en.wikipedia.org/wiki/Rebecca_Harding_Davis
 description: '1862'
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/515#Margret-Howth--A-Story-of-To-day
 gutenberg_issued: '1996-05-01'
 gutenberg_type: Text
 identifiers:
